fix(logs): align advanced filters in low resolution
fix gravitee-io/issues#3793

--- a/src/app/components/gv-analytics-filters/gv-analytics-filters.component.css
+++ b/src/app/components/gv-analytics-filters/gv-analytics-filters.component.css
@@ -35,3 +35,10 @@
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 1rem;
 }
+
+.grid-filters > * {
+  display: flex;
+  align-self: flex-end;
+  width: 100%;
+  flex-direction: column;
+}
